--- a/Calculadora_Areas_Perimetros/Properties/Resources.resx
+++ b/Calculadora_Areas_Perimetros/Properties/Resources.resx
@@ -127,10 +127,13 @@
   <data name="area-del-trapezoide-100x100" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\area-del-trapezoide-100x100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="area-del-heptagono-100x98" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\area-del-heptagono-100x98.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="area-del-cuadrado-100x100" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\area-del-cuadrado-100x100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="area-del-heptagono-100x98" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\area-del-heptagono-100x98.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="3574480-200" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3574480-200.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
